# tableau-vizql-bridge

./: .env.example  .gitignore  API_REFERENCE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/tableau/: SKILL.md
skills/start/: SKILL.md
skills/tableau/: SKILL.md
tableau_interactor/cloud/: __init__.py  session.py
tableau_interactor/cloud/vizql/: PROTOCOL.md  __init__.py  api.py  capture_drop.py  connect.py  dispatcher.js  exec.py  hunt.py  recipes.py  shot.py  watch.py
