[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tableau-vizql-bridge"
version = "0.1.0"
description = "Programmatic Tableau Cloud authoring by driving the internal VizQL command API - no official API required."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["tableau_interactor*"]
